Activity1 commit by Yijie Huang version 1 add comments add code add empty imageview 11/21 23.00

--- a/app/src/main/res/layout/activity_game1.xml
+++ b/app/src/main/res/layout/activity_game1.xml
@@ -6,4 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".Game1Activity">
 
+    <LinearLayout
+        android:id="@+id/TextAndPic"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/infotext"
+            android:layout_width="match_parent"
+            android:layout_height="81dp" />
+
+        <ImageView
+            android:id="@+id/full"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <ImageView
+            android:id="@+id/half"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <ImageView
+            android:id="@+id/empty"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:srcCompat="@tools:sample/avatars" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
