--- a/app/src/main/res/layout/activity_game2.xml
+++ b/app/src/main/res/layout/activity_game2.xml
@@ -6,4 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".Game2Activity">
 
+    <TextView
+        android:id="@+id/LatitudeText"
+        android:layout_width="201dp"
+        android:layout_height="123dp"
+        android:layout_marginEnd="184dp"
+        android:layout_marginRight="184dp"
+        android:layout_marginBottom="548dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/LongitudeText"
+        android:layout_width="201dp"
+        android:layout_height="161dp"
+        android:layout_marginEnd="184dp"
+        android:layout_marginRight="184dp"
+        android:layout_marginBottom="332dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
