activity 6 - ver 1 activity 5 - 60% image button * 9 - set button listener - set GameLevel class * 9 - set

--- a/app/src/main/res/layout/activity_game6.xml
+++ b/app/src/main/res/layout/activity_game6.xml
@@ -6,4 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".Game6Activity">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/timer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="10" />
+
+        <Button
+            android:id="@+id/start"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="start" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
