hint button - set activity 6 - ver 1 activity 5 - ver 1 image button * 9 - set button listener - set GameLevel class * 9 - set

--- a/app/src/main/res/layout/activity_game6.xml
+++ b/app/src/main/res/layout/activity_game6.xml
@@ -8,6 +8,13 @@
     tools:context=".Game6Activity">
 
     <Button
+        android:id="@+id/hintButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:text="hint" />
+
+    <Button
         android:id="@+id/clickButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
