--- a/app/src/main/res/layout/activity_game6.xml
+++ b/app/src/main/res/layout/activity_game6.xml
@@ -21,6 +21,7 @@
         android:layout_marginLeft="12dp"
         android:layout_marginTop="100dp"
         android:text="click"
+        android:stateListAnimator="@null"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
