--- a/app/src/main/res/layout/activity_game2.xml
+++ b/app/src/main/res/layout/activity_game2.xml
@@ -17,11 +17,12 @@
         android:id="@+id/LatitudeText"
         android:layout_width="201dp"
         android:layout_height="123dp"
+        android:layout_below="@id/hintButton"
+        android:layout_marginTop="164dp"
         android:layout_marginEnd="184dp"
         android:layout_marginRight="184dp"
         android:layout_marginBottom="548dp"
         android:text="TextView"
-        android:layout_below="@id/hintButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
