--- a/app/src/main/res/layout/activity_catalog.xml
+++ b/app/src/main/res/layout/activity_catalog.xml
@@ -1,157 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    tools:context=".Game6Activity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/GameList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <TableLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-        <ImageButton
-            android:id="@+id/game1"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="44dp"
-            android:layout_marginLeft="44dp"
-            android:layout_marginTop="56dp"
-            android:adjustViewBounds="true"
-            android:scaleType="centerInside"
-            android:src="@drawable/c1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/c1"
-            tools:srcCompat="@drawable/c1" />
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <ImageButton
-            android:id="@+id/game2"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="137dp"
-            android:layout_marginLeft="137dp"
-            android:layout_marginTop="56dp"
-            android:layout_marginEnd="167dp"
-            android:layout_marginRight="167dp"
-            android:layout_marginBottom="571dp"
-            android:adjustViewBounds="true"
-            android:scaleType="centerInside"
-            android:src="@drawable/c2"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            tools:src="@drawable/c2"
-            tools:srcCompat="@drawable/c2" />
+            <ImageButton
+                android:id="@+id/game1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/c1"
+                tools:src="@drawable/c1"
+                tools:srcCompat="@drawable/c1" />
 
-        <ImageButton
-            android:id="@+id/game3"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="56dp"
-            android:layout_marginEnd="44dp"
-            android:layout_marginRight="44dp"
-            android:layout_marginBottom="571dp"
-            android:adjustViewBounds="true"
-            android:scaleType="centerInside"
-            android:src="@drawable/c3"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/game2"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            tools:src="@drawable/c3"
-            tools:srcCompat="@drawable/c3" />
+            <ImageButton
+                android:id="@+id/game2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/c2"
+                tools:src="@drawable/c2"
+                tools:srcCompat="@drawable/c2" />
 
-        <ImageButton
-            android:id="@+id/game4"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="44dp"
-            android:layout_marginLeft="44dp"
-            android:layout_marginTop="156dp"
-            android:adjustViewBounds="true"
-            android:scaleType="centerInside"
-            android:src="@drawable/c4"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/c4"
-            tools:srcCompat="@drawable/c4" />
+            <ImageButton
+                android:id="@+id/game3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/c3"
+                tools:src="@drawable/c3"
+                tools:srcCompat="@drawable/c3" />
+        </TableRow>
 
-        <ImageButton
-            android:id="@+id/game5"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="156dp"
-            android:adjustViewBounds="true"
-            android:scaleType="centerInside"
-            android:src="@drawable/c5"
-            app:layout_constraintStart_toEndOf="@+id/game4"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/c5"
-            tools:srcCompat="@drawable/c5" />
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-        <ImageButton
-            android:id="@+id/game6"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="156dp"
-            android:adjustViewBounds="true"
-            android:scaleType="centerInside"
-            android:src="@drawable/c6"
-            app:layout_constraintStart_toEndOf="@+id/game5"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/c6"
-            tools:srcCompat="@drawable/c6" />
+            <ImageButton
+                android:id="@+id/game4"
+                android:src="@drawable/c4"
+                tools:src="@drawable/c4"
+                tools:srcCompat="@drawable/c4" />
 
-        <ImageButton
-            android:id="@+id/game7"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="44dp"
-            android:layout_marginLeft="44dp"
-            android:layout_marginTop="256dp"
-            android:adjustViewBounds="true"
-            android:scaleType="centerInside"
-            android:src="@drawable/c7"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/c7"
-            tools:srcCompat="@drawable/c7" />
+            <ImageButton
+                android:id="@+id/game5"
+                android:src="@drawable/c5"
+                tools:src="@drawable/c5"
+                tools:srcCompat="@drawable/c5" />
 
-        <ImageButton
-            android:id="@+id/game8"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="144dp"
-            android:layout_marginLeft="144dp"
-            android:layout_marginTop="256dp"
-            android:adjustViewBounds="true"
-            android:scaleType="centerInside"
-            android:src="@drawable/c8"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/c8"
-            tools:srcCompat="@drawable/c8" />
+            <ImageButton
+                android:id="@+id/game6"
+                android:src="@drawable/c6"
+                tools:src="@drawable/c6"
+                tools:srcCompat="@drawable/c6" />
+        </TableRow>
 
-        <ImageButton
-            android:id="@+id/game9"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="256dp"
-            android:adjustViewBounds="true"
-            android:scaleType="centerInside"
-            android:src="@drawable/c9"
-            app:layout_constraintStart_toEndOf="@+id/game8"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/c9"
-            tools:srcCompat="@drawable/c9" />
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</LinearLayout>
+            <ImageButton
+                android:id="@+id/game7"
+                android:src="@drawable/c7"
+                tools:src="@drawable/c7"
+                tools:srcCompat="@drawable/c7" />
+
+            <ImageButton
+                android:id="@+id/game8"
+                android:src="@drawable/c8"
+                tools:src="@drawable/c8"
+                tools:srcCompat="@drawable/c8" />
+
+            <ImageButton
+                android:id="@+id/game9"
+                android:src="@drawable/c9"
+                tools:src="@drawable/c9"
+                tools:srcCompat="@drawable/c9" />
+        </TableRow>
+
+    </TableLayout>
+
+</RelativeLayout>
